--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,58 +1,75 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat|Pacifico&display=swap');
-*{
-	box-sizing: border-box;
+
+* {
+    box-sizing: border-box;
 }
-body{
-	font-family: 'Montserrat', sans-serif;
-	margin: 0;
+
+body {
+    font-family: 'Montserrat', sans-serif;
+    margin: 0;
 }
+
 /*------------------------Estilos base------------------------*/
 img {
-	display: block;
-	width: 100%;
-	max-width: 100%;
+    display: block;
+    width: 100%;
+    max-width: 100%;
 }
-h1, h2, h3, h4, h5, h6 {
-	margin: 0;
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    margin: 0;
 }
+
 .container {
-	width: 100%;
-	margin: auto;
+    width: 100%;
+    margin: auto;
 }
+
 .container--flex {
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: space-between;
-	align-items: center;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
 }
+
 .column {
-	width: 100%;
+    width: 100%;
 }
+
 /*------------------------Estilos header------------------------*/
 .main-header {
-	width: 100%;
+    width: 100%;
 }
+
 .logo {
-	font-size: 1.8em;
-	color: #DE423A;
-	padding: 10PX;
-	font-family: 'Pacifico', cursive;
-	font-weight: 100;
+    font-size: 1.8em;
+    color: #DE423A;
+    padding: 10PX;
+    font-family: 'Pacifico', cursive;
+    font-weight: 100;
 }
-.main-header__contactInfo__phone {
-	background: #DE423A;
-	color: white;
-	margin: 0 auto;
-	padding: 10px;
+
+.main-header__contantInfo__phone {
+    background: #DE423A;
+    color: #fff;
+    margin: 0 auto;
+    padding: 10px;
 }
-.main-header__contactInfo__address {
-	padding: 10px;
-	margin: 0;
+
+.main-header__contantInfo__address {
+    padding: 10px;
+    margin: 0;
 }
+
 .main-header [class*="icon-"]:before {
-	position: relative;
-	top: 2px;
-	right: 5px;
+    position: relative;
+    top: 2px;
+    right: 5px;
 }
 
 
@@ -61,105 +78,113 @@ h1, h2, h3, h4, h5, h6 {
 /*------------------------Estilos del manú------------------------*/
 
 .main-nav {
-	width: 100%;
-	position: relative;
-	z-index: 2000;
-	padding: 10px;
+    width: 100%;
+    position: relative;
+    z-index: 2000;
+    padding: 10px;
 }
-.icon-menu {
-	display: block;
-	color: white;
-	border: 1px solid white;
-	border-radius: 3px;
-	width: 40px;
-	height: 40px;
-	line-height: 45px;
-	text-align: center;
-	cursor: pointer;
-	font-size: 1.5em;
-}
-.social-icon {
-	display: flex;
-	justify-content: space-between;
-}
-.social-icon [class*="icon-"] {
-	color: darkblue;
-	margin-left: 10px;
-	display: flex;
-	justify-content: center;
-	font-size: 1.3em;
-	width: 35px;
-	height: 35px;
-	background: white;
-	border-radius: 50%;
-}
-.social-icon__link {
-	text-decoration: none;
-}
-.menu {
-	position: absolute;
-	top: 60px;
-	left: 0;
-	width: 100%;
-	background: rgba(0,0,0,.90);
-	padding: 0;
-	margin: 0;
-	list-style: none;
-	text-align: center,
-}
-.menu__link {
-	display: block;
-	padding: 15px;
-	color: white;
-	text-decoration: none;
-}
-.menu__link:hover {
-	background: #DE423A;
-}
-.menu__link--select {
-	background: #DE423A;
 
+.icon-menu {
+    display: block;
+    color: #fff;
+    border: 1px solid #fff;
+    border-radius: 4px;
+    width: 40px;
+    height: 40px;
+    line-height: 47px;
+    text-align: center;
+    cursor: pointer;
+    font-size: 2em;
+}
+
+.social-icon {
+    display: flex;
+    justify-content: space-between;
+}
+
+.social-icon [class*="icon-"] {
+    color: #000000;
+    margin-left: 12px;
+    display: flex;
+    justify-content: center;
+    font-size: 1.3em;
+    width: 30px;
+    height: 30px;
+    background: #fff;
+    border-radius: 50%;
+}
+
+.social-icon__link {
+    text-decoration: none;
+}
+
+.menu {
+    position: absolute;
+    top: 60px;
+    left: 0;
+    width: 100%;
+    background: rgba(0, 0, 0, .75);
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    text-align: center;
+    height: 0;
+    overflow: hidden;
+    transition: height 0.3s linear;
+}
+
+.menu__link {
+    display: block;
+    padding: 15px;
+    color: #fff;
+    text-decoration: none;
+}
+
+.menu__link:hover {
+    background: #DE423A;
+}
+
+.menu__link--select {
+    background: #DE423A;
+}
+
+.mostrar {
+    height: 196px;
 }
 
 
 
 /*------------------------Estilos del Banner------------------------*/
 .banner {
-	margin-top: -55px;
-	position: relative;
+    margin-top: -55px;
+    position: relative;
 }
+
 .banner: before {
-	content: '';
-	position: absolute;
-	width: 100%;
-	height: 100px;
-	background: rgba(0,0,0,0.5);
-	z-index: 1000;
-	top: 0;
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100px;
+    background: rgba(0, 0, 0, .95);
+    z-index: 1000;
+    top: 0;
 }
+
 .banner__img {
-	width: 100%;
-	height: 500px;
-	object-fit: cover;
+    width: 100%;
+    height: 500px;
+    object-fit: cover;
 }
+
 .banner__content {
-	width: 90%;
-	color: white;
-	text-align: center;
-	position: absolute;
-	z-index: 1500;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%) translate(-50%);
-	font-size: 1.5em;
-	font-weight: bold;
+    width: 90%;
+    color: #fff;
+    text-align: center;
+    position: absolute;
+    z-index: 1500;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    font-size: 1.5em;
+    font-weight: bold;
 }
-
-
-
-
-
-
-
-
-
