--- a/css/estilos.css
+++ b/css/estilos.css
@@ -39,6 +39,7 @@ h1, h2, h3, h4, h5, h6 {
 /*------------------------Estilos header------------------------*/
 .main-header {
     width: 100%;
+    background: rgba(0,0,0, 0.60)
 }
 
 .logo {
@@ -49,14 +50,14 @@ h1, h2, h3, h4, h5, h6 {
     font-weight: 100;
 }
 
-.main-header__contantInfo__phone {
+.main-header__contactInfo__phone {
     background: #DE423A;
     color: #fff;
     margin: 0 auto;
     padding: 10px;
 }
 
-.main-header__contantInfo__address {
+.main-header__contactInfo__address {
     padding: 10px;
     margin: 0;
 }
@@ -66,9 +67,6 @@ h1, h2, h3, h4, h5, h6 {
     top: 2px;
     right: 5px;
 }
-
-
-
 
 /*------------------------Estilos del manú------------------------*/
 
@@ -147,8 +145,6 @@ h1, h2, h3, h4, h5, h6 {
     height: 196px;
 }
 
-
-
 /*------------------------Estilos del Banner------------------------*/
 .banner {
     margin-top: -55px;
@@ -182,4 +178,174 @@ h1, h2, h3, h4, h5, h6 {
     transform: translateX(-50%) translateY(-50%);
     font-size: 1.5em;
     font-weight: bold;
+}
+
+/*------------------------Estilos Principales------------------------*/
+.group--color .container {
+    background: #DE423A;
+    color: #fff;
+    padding: 10px;
+    text-align: center;
+}
+
+.main__title {
+    margin: 15px 0;
+    font-size: 1.8em;
+    font-family: 'Pacifico', cursive;
+    font-weight: 100;
+}
+.column__title {
+    font-size: 1.3em;
+}
+.main__about__description  .column:nth-child(2){
+    padding: 10px;
+}
+.btn {
+    display: block;
+    text-align: center;
+    text-decoration: none;
+    width: 120px;
+    background: #DE423A;
+    color: #fff;
+    padding: 10px;
+    margin: 10px auto;
+}
+.group__title {
+    font-family: 'pacifico', cursive;
+    text-align: center;
+    font-weight: 100;
+    font-size: 1.9em;
+    margin: 30px;
+}
+
+.today-special .column {
+    margin-bottom: 30px;
+    text-align: center;
+}
+.today-special__img {
+    margin: auto;
+    max-width: 450px;
+}
+.today-special__title {
+    font-size: 1.3em;
+    padding-top: 10px;
+    padding-bottom: 20px;
+}
+.today-especial__price {
+    font-size: 1.5em;
+    color: #DE423A;
+    font-weight: bold;
+}
+
+/*------------------------Estilos Principales------------------------*/
+
+.main-footer {
+    background: #000;
+    color: #fff;
+    padding: 15px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    font-size: .9em;
+}
+
+.copy {
+    text-align:center;
+    margin:auto;
+    margin-top: 15px;
+}
+
+.main-footer [class*="icon-"]{
+    color: #fff;
+    text-decoration: none;
+}
+
+.main-footer [class*="icon-"]:before {
+    position: relative;
+    top: 3px;
+    right: 5px;
+}
+
+/*------------------------Estilos Responsive desde CSS------------------------*/
+
+@media screen and (min-width:480px) {
+    .logo {
+        color: #fff;
+    }
+    .main-header__contactInfo {
+        text-align: right;
+    }
+    .main-header__contactInfo__phone {
+        background: none;
+    }
+    .main-header__contactInfo__address {
+        color: #fff;
+    }
+    .main-nav {
+        background: rgba(0,0,0,0.75)
+    }
+    .banner {
+        margin-top: -170px;
+        z-index: -1000;
+    }
+    .banner__content {
+        font-size: 2em,
+    }
+    .main {
+        padding-bottom: 15px;
+            }
+
+
+    .main__about__description  .column:nth-child(2) {
+        padding-left: 20px;
+        font-size: .9em;
+    }
+    .main__about__description .btn {
+        margin: 0;
+    }
+    .today-special .column {
+        border: 5px solid #ddd;
+    }
+    .today-special__img {
+        height: 300px;
+        object-fit: cover;
+    }
+
+    .column--50 {
+        width: 49%;
+    }
+    .column--50-25 {
+        width: 49%;
+    }
+    .colum--33 {
+        width: 32%;
+    }
+}
+@media screen and (min-width:768px) {
+    .main__title {
+        font-size: 2.2em;
+    }
+    .main__about__description {
+        margin-top: 30px;
+    }
+    .main__about__description .column--50:nth-child(2){
+        font-size: 1em;
+    }
+    .main__about__description .column--50:nth-child(2) .column__txt {
+        line-height: 30px;
+    }
+    .column--50-25 {
+        width:24.5%;
+    }
+    .column__title {
+        font-size: 1em;
+    }
+    .group__title {
+        flex-shrink: 2.2em;
+    }
+}
+@media screen and (min-width:1024px) {
+
+
+
+
 }
