--- a/css/estilos.css
+++ b/css/estilos.css
@@ -68,7 +68,7 @@ h1, h2, h3, h4, h5, h6 {
     right: 5px;
 }
 
-/*------------------------Estilos del manú------------------------*/
+/*------------------------Estilos del menú------------------------*/
 
 .main-nav {
     width: 100%;
@@ -169,14 +169,14 @@ h1, h2, h3, h4, h5, h6 {
 
 .banner__content {
     width: 90%;
-    color: #fff;
+    color: #DE423A;
     text-align: center;
     position: absolute;
     z-index: 1500;
     top: 50%;
     left: 50%;
     transform: translateX(-50%) translateY(-50%);
-    font-size: 1.5em;
+    font-size: 1.7em;
     font-weight: bold;
 }
 
@@ -247,6 +247,9 @@ h1, h2, h3, h4, h5, h6 {
     padding-bottom: 20px;
     font-size: .9em;
 }
+.main-footer .container--flex {
+        align-items: flex-start;
+    }
 
 .copy {
     text-align:center;
@@ -309,7 +312,6 @@ h1, h2, h3, h4, h5, h6 {
         height: 300px;
         object-fit: cover;
     }
-
     .column--50 {
         width: 49%;
     }
@@ -344,8 +346,75 @@ h1, h2, h3, h4, h5, h6 {
     }
 }
 @media screen and (min-width:1024px) {
-
-
-
-
+    .container {
+        width: 1000px;
+    }
+    .logo {
+        font-size: 2em;
+        padding: 0;
+    }
+    .main-header__contactInfo__phone,
+    .main-header__contactInfo__address {
+        padding-right: 0;
+        font-size: 1.15em;
+    }
+    .main-nav {
+        padding: 0;
+    }
+    .banner__content {
+        font-size: 2.5em;
+    }
+    .icon-menu {
+        display: none;
+    }
+    .menu {
+        position: static;
+        display: flex;
+        height: auto;
+        width: auto;
+    }
+    .menu__link {
+        padding: 20px;
+    }
+    .group--color .container{
+        margin-top: 30px;
+        margin-bottom: 30px;
+        padding: 20px;
+    }
+    .main__title {
+        font-size: 2.5em;
+    }
+    .main__about__description .column--50:nth-child(2) .column__txt {
+        line-height: 40px;
+    }
+    .today-special__title {
+        font-size: 1.4em;
+    }
+    .today-especial__price {
+        font-size: 1.8em;
+    }
+    .main-footer{
+        padding-top: 30px;
+        padding-bottom: 30px;
+    }
 }
+@media screen and (min-width:1300px) {
+    .container {
+        width: 95%;
+    }
+    .banner__img {
+        height: 800px;
+    }
+    .main__about__description .column:nth-child(1) img {
+        width: 100%;
+        height: 350px;
+        object-fit: contain
+    }
+    .today-special__img {
+        height: 370px;
+    }
+}
+
+
+
+
