se hacen algunas corecciones en la pagina de Inicio; se crea la pagina de muebles de sala y  se crea archivo de  sala.css para los estilos a la misma.

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -318,7 +318,7 @@ h1, h2, h3, h4, h5, h6 {
     .column--50-25 {
         width: 49%;
     }
-    .colum--33 {
+    .column--33 {
         width: 32%;
     }
 }
