Se agrega script para la  fecha en los archivos index.html y sala.html.

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -246,6 +246,7 @@ h1, h2, h3, h4, h5, h6 {
     padding-top: 20px;
     padding-bottom: 20px;
     font-size: .9em;
+    text-align: justify;
 }
 .main-footer .container--flex {
         align-items: flex-start;
